# rustgd

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: extendr-wrappers.R  frames.R  rustgd.R  webview.R
man/: dot-rustgd_clear_url_descriptors.Rd  dot-rustgd_frames_alive.Rd  dot-rustgd_frames_bin.Rd  dot-rustgd_frames_dir.Rd  dot-rustgd_frames_ensure.Rd  dot-rustgd_frames_next_index.Rd  dot-rustgd_frames_register_cleanup.Rd  dot-rustgd_frames_reset.Rd  dot-rustgd_next_index.Rd  dot-rustgd_pid_alive.Rd  dot-rustgd_push_url.Rd  dot-rustgd_record_current.Rd  dot-rustgd_register_cleanup.Rd  dot-rustgd_widgets_dir.Rd  dot-rustgd_write_descriptor.Rd  rustgd.Rd  rustgd_browse.Rd  rustgd_disable.Rd  rustgd_enable.Rd  rustgd_ensure_webview.Rd  rustgd_handle_clear_all.Rd  rustgd_handle_clear_plot.Rd  rustgd_input_handler.Rd  rustgd_poll_resize.Rd  rustgd_set_current_page.Rd  rustgd_set_replay_mode.Rd  rustgd_shiny_launch.Rd  rustgd_shutdown.Rd  rustgd_task_callback.Rd  rustgd_view.Rd  rustgd_webview_bin.Rd  unuse_rustgd.Rd  unuse_rustgd_webview.Rd  use_rustgd.Rd  use_rustgd_webview.Rd  view.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  rustgd-win.def
src/rust/: Cargo.toml  build.rs  document.rs
src/rust/src/: lib.rs  rustgd_device.c
tools/: build-viewer.sh
